--- a/GNSS_Driver.ioc
+++ b/GNSS_Driver.ioc
@@ -5,7 +5,8 @@ CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
 Dma.Request0=USART3_RX
-Dma.RequestsNb=1
+Dma.Request1=USART3_TX
+Dma.RequestsNb=2
 Dma.USART3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART3_RX.0.EventEnable=DISABLE
 Dma.USART3_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -24,6 +25,24 @@ Dma.USART3_RX.0.SyncEnable=DISABLE
 Dma.USART3_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.USART3_RX.0.SyncRequestNumber=1
 Dma.USART3_RX.0.SyncSignalID=NONE
+Dma.USART3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_TX.1.EventEnable=DISABLE
+Dma.USART3_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_TX.1.Instance=DMA1_Stream1
+Dma.USART3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART3_TX.1.Mode=DMA_NORMAL
+Dma.USART3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART3_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART3_TX.1.RequestNumber=1
+Dma.USART3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART3_TX.1.SignalID=NONE
+Dma.USART3_TX.1.SyncEnable=DISABLE
+Dma.USART3_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART3_TX.1.SyncRequestNumber=1
+Dma.USART3_TX.1.SyncSignalID=NONE
 File.Version=6
 KeepUserPlacement=false
 MMTAppRegionsCount=0
@@ -56,6 +75,7 @@ MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -64,7 +84,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:false\:true\:false
 NVIC.USART3_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PB10.Mode=Asynchronous
